--- a/src/index.html
+++ b/src/index.html
@@ -7,41 +7,108 @@
   <link rel="stylesheet" href="main.css">
   <title>HTML Portfolio</title>
 </head>
+
+<nav class="navbar navbar-default">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#portfolio-collapse-menu">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Victor Wongwajarachot</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="portfolio-collapse-menu">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+      </ul>
+    </div>
+    <!-- /.navbar-collapse -->
+  </div>
+  <!-- /.container-fluid -->
+</nav>
+
+<div id="portfolio-carousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#portfolio-carousel" data-slide-to="0" class="active"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="1"></li>
+    <li data-target="#portfolio-carousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>Who I am</h1>
+          <p>Hi my name is Victor Wongwajarachot. I am a self-taught programmer, learning my skills through various coding sites such as Code School or Codingames. I am experimenting in front-end web development and some UX/UI design work. One day, I hope to work as a web design and create many websites and my own web/phone app.</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>What I do</h1>
+          <p>I practice front-end programming and UX/UI design while trying to creatively create eye-catching projects and interesting pages.</p>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <h1>What I've done</h1>
+          <p>I have created a some web pages for my friends and hoping to make more websites and web applications in the future.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a class="left carousel-control" href="#portfolio-carousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#portfolio-carousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<div class = "marketing">
+  <footer>
+    <div class = "container">
+      <h3>Get In Touch</h3>
+      <p>Here are some of my contact links! Also feel free to reach out through my <a href = "mailto:vwongwaj@gmail.com">email: vwongwaj@gmail.com</a></p>
+      <a href = "https://www.linkedin.com/in/victor-wongwajarachot-8a6b64106/">LinkedIn</a>
+      <a href = "https://www.facebook.com/victor.wongwajarachot">Facebook</a>
+      <a href = "https://github.com/victor-wongwajarachot">Github</a>
+    </div>
+  </footer>
+</div>
+<div class = "container">
+
+</div>
+<div class = "row">
+  <div class = "col-md-4">
+    <span class = "glyphicon glyphicon-picture"></span>
+    <h2>HTML & CSS</h2>
+    <p>I enjoy the creative side of making website.</p>
+  </div>
+  <div class = "col-md-4">
+    <span class = "glyphicon glyphicon-cog"></span>
+    <h2>Javascript</h2>
+    <p>I love having my websites have different functionalities.</p>
+  </div>
+  <div class = "col-md-4">
+    <span class = "glyphicon glyphicon-blackboard"></span>
+    <h2>Design</h2>
+    <p>Everyone loves an aesthetically pleasing website.</p>
+  </div>
+</div>
+
 <body>
-
-  <!--
-    Previous project placeholder begins
-  -->
-  <div class="header">
-    <h1>Morgan McCircuit</h1>
-    <h2>I write code</h2>
-  </div>
-
-  <div class="tagline">
-    <h3>Who I am</h3>
-    <p>Hi, my name is Morgan and I love to write code that is efficient.</p>
-  </div>
-
-
-  <div class="skills">
-    <h3>What I do</h3>
-    <p>Here are some of the languages I use on a day-to-day.</p>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-    </ul>
-  </div>
-
-  <div class="contact">
-    <h3>Get in touch</h3>
-    <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-  </div>
-  <!--
-    Previous project placeholder ends
-    (unused pieces will be deleted at the last task)
-  -->
-
 
   <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
